build/log/idf_py_stdout_output_14995
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/frey/4SkinOS/build/bootloader/esp-idf/esptool_py && /home/frey/.espressif/python_env/idf5.4_py3.12_env/bin/python /home/frey/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/frey/4SkinOS/build/bootloader/bootloader.bin
Bootloader binary size 0x6920 bytes. 0x6e0 bytes (6%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/kernel.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/kernel.c.obj 
/home/frey/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4-dev-2744-g59e1838270\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/frey/4SkinOS/build/config -I/home/frey/4SkinOS/main -I/home/frey/esp/esp-idf/components/newlib/platform_include -I/home/frey/esp/esp-idf/components/freertos/config/include -I/home/frey/esp/esp-idf/components/freertos/config/include/freertos -I/home/frey/esp/esp-idf/components/freertos/config/xtensa/include -I/home/frey/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/frey/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/frey/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/frey/esp/esp-idf/components/freertos/esp_additions/include -I/home/frey/esp/esp-idf/components/esp_hw_support/include -I/home/frey/esp/esp-idf/components/esp_hw_support/include/soc -I/home/frey/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/frey/esp/esp-idf/components/esp_hw_support/dma/include -I/home/frey/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/frey/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/frey/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/frey/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/frey/esp/esp-idf/components/heap/include -I/home/frey/esp/esp-idf/components/log/include -I/home/frey/esp/esp-idf/components/soc/include -I/home/frey/esp/esp-idf/components/soc/esp32 -I/home/frey/esp/esp-idf/components/soc/esp32/include -I/home/frey/esp/esp-idf/components/hal/platform_port/include -I/home/frey/esp/esp-idf/components/hal/esp32/include -I/home/frey/esp/esp-idf/components/hal/include -I/home/frey/esp/esp-idf/components/esp_rom/include -I/home/frey/esp/esp-idf/components/esp_rom/esp32/include -I/home/frey/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/frey/esp/esp-idf/components/esp_rom/esp32 -I/home/frey/esp/esp-idf/components/esp_common/include -I/home/frey/esp/esp-idf/components/esp_system/include -I/home/frey/esp/esp-idf/components/esp_system/port/soc -I/home/frey/esp/esp-idf/components/esp_system/port/include/private -I/home/frey/esp/esp-idf/components/xtensa/esp32/include -I/home/frey/esp/esp-idf/components/xtensa/include -I/home/frey/esp/esp-idf/components/xtensa/deprecated_include -I/home/frey/esp/esp-idf/components/lwip/include -I/home/frey/esp/esp-idf/components/lwip/include/apps -I/home/frey/esp/esp-idf/components/lwip/include/apps/sntp -I/home/frey/esp/esp-idf/components/lwip/lwip/src/include -I/home/frey/esp/esp-idf/components/lwip/port/include -I/home/frey/esp/esp-idf/components/lwip/port/freertos/include -I/home/frey/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/frey/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/frey/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/frey/esp/esp-idf/components/console -I/home/frey/esp/esp-idf/components/vfs/include -I/home/frey/esp/esp-idf/components/esp_vfs_console/include -I/home/frey/esp/esp-idf/components/esp_driver_uart/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/frey/4SkinOS=. -fmacro-prefix-map=/home/frey/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/kernel.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/kernel.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/kernel.c.obj -c /home/frey/4SkinOS/main/kernel.c
/home/frey/4SkinOS/main/kernel.c: In function 'initialize_console':
/home/frey/4SkinOS/main/kernel.c:16:5: error: implicit declaration of function 'uart_vfs_dev_port_set_rx_line_endings'; did you mean 'esp_vfs_dev_uart_set_rx_line_endings'? [-Werror=implicit-function-declaration]
   16 |     uart_vfs_dev_port_set_rx_line_endings(CONFIG_ESP_CONSOLE_UART_NUM, ESP_LINE_ENDINGS_CR);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |     esp_vfs_dev_uart_set_rx_line_endings
/home/frey/4SkinOS/main/kernel.c:18:5: error: implicit declaration of function 'uart_vfs_dev_port_set_tx_line_endings'; did you mean 'esp_vfs_dev_uart_set_tx_line_endings'? [-Werror=implicit-function-declaration]
   18 |     uart_vfs_dev_port_set_tx_line_endings(CONFIG_ESP_CONSOLE_UART_NUM, ESP_LINE_ENDINGS_CRLF);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |     esp_vfs_dev_uart_set_tx_line_endings
/home/frey/4SkinOS/main/kernel.c:37:5: error: implicit declaration of function 'uart_vfs_dev_use_driver'; did you mean 'esp_vfs_dev_uart_use_driver'? [-Werror=implicit-function-declaration]
   37 |     uart_vfs_dev_use_driver(CONFIG_ESP_CONSOLE_UART_NUM);
      |     ^~~~~~~~~~~~~~~~~~~~~~~
      |     esp_vfs_dev_uart_use_driver
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
